convert Percepts to classes